# candle-notebook

./: .gitignore  Cargo.toml  README.md  cheatsheet.md
examples/all-MiniLM-L6-v2/: README.md  all-minilm-l6-v2.py  main.rs
examples/bert-base-chinese/: README.md  bert-base-chinese.py  main.rs  test.py
examples/bert-base-chinese-macross/: main.rs
examples/bge-m3/: main.rs
examples/bge-reranker-base/: main.rs  test.py
examples/bge-reranker-v2-m3/: test.py
examples/candle-meet-yew/: Cargo.toml  README.md  index.html
examples/candle-meet-yew/src/: bert_base_chinese.rs  main.rs  show_tensor.rs
examples/crf/: README.md
examples/cross-encoder/: README.md  bert.rs  main.rs  test_seqence_classification.py
examples/cross-encoder-macross/: main.rs
examples/fix_old_format/: main.rs
examples/intern_vit/: test.py
examples/matrix-op/: README.md  main.rs
examples/mnist-training/: README.md  main.rs
examples/mospeada-all-MiniLM-L6-v2/: main.rs
examples/mospeada-cross-encoder/: main.rs
examples/mtk-breeze/: main.rs  test.py
examples/mtk-breeze/breeze/: config.rs  intern_vit.rs  mod.rs
examples/sentence-transformers/: test.py  test2.py
examples/sequence-classification/: README.md  bert.rs  main.rs  test.py  test_seqence_classification.py  test_tokenizer.py
examples/tensor-adv-op/: README.md
examples/tensor-op/: README.md  _README.md  main.rs
examples/tensor-op-2/: README.md
src/: generation.rs  lib.rs
tests/: conv_tensor.rs  load_tokenizer.rs  tensor_arange.rs  tensor_arg.rs  tensor_arithmetic.rs  tensor_broadcast.rs  tensor_broadcast_compare.rs  tensor_broadcast_matmul.rs  tensor_broadcast_max_and_min.rs  tensor_cat.rs  tensor_chunk.rs  tensor_compare.rs  tensor_creation.rs  tensor_dim.rs  tensor_from_iter.rs  tensor_from_slice.rs  tensor_from_vec.rs  tensor_full.rs  tensor_gather.rs  tensor_get_values.rs  tensor_index.rs  tensor_index_select.rs  tensor_matmul.rs  tensor_max.rs  tensor_maximum.rs  tensor_mean.rs  tensor_min.rs  tensor_minimum.rs  tensor_narrow.rs  tensor_new.rs  tensor_ones.rs  tensor_rand.rs  tensor_randn.rs  tensor_squeeze.rs  tensor_stack.rs  tensor_sum.rs  tensor_to_dtype.rs  tensor_transpose.rs  tensor_zeros.rs
tutorial/: README.md
tutorial/1.Introduction/: README.md  README_src.md  dump_model.py  dump_tokenizer.py  main.rs
tutorial/2.tokenizer-and-model/: README.md  README_src.md  all-minilm-l6-v2.py  model.rs  tokenizer.rs
tutorial/3.Devices/: Cargo.toml  README.md  README_src.md
tutorial/3.Devices/src/: main.rs
tutorial/3.device-acceleration/: Cargo.toml  README.md  README_src.md
tutorial/4.generation/: Cargo.toml  README.md  README_src.md
tutorial/4.generation/src/: main.rs
tutorial/5.generation-gguf/: Cargo.toml  README.md  README_src.md
tutorial/5.generation-gguf/src/: main.rs
tutorial/6.qwen3/: Cargo.toml
tutorial/6.text-embeddings/: Cargo.toml
tutorial/8.text-embeddings/: Cargo.toml
tutorial/8.text-embeddings/src/: main.rs
tutorial/quantized_qwen/: Cargo.toml
tutorial/quantized_qwen/src/: main.rs
tutorial/qwen3/: Cargo.toml  README_src.md
tutorial/qwen3/src/: main.rs
