[package]
name = "candle-notebook"
version = "0.1.0"
edition = "2021"

[dependencies]
accelerate-src = { version = "0.3.2", optional = true }
bindgen_cuda = { version = "0.1.5", optional = true }
candle-core = "0.8.0"
candle-datasets = "0.8.0"
candle-nn = "0.8.0"
candle-transformers = "0.8.0"
half = "2.4.1"
hf-hub = "0.3.2"
intel-mkl-src = { version = "0.8.1", optional = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokenizers = "0.20.3"

[dev-dependencies]
anyhow = "1.0.93"
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
clap = { version = "4.5.20", features = ["derive"] }
rand = "0.8.5"

[features]
default = []
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "dep:bindgen_cuda"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl"]
metal = ["candle-core/metal", "candle-nn/metal"]
