[workspace]
members = [
    "examples/candle-meet-yew",
]

[workspace.dependencies]
accelerate-src = { version = "0.3.2"}
bindgen_cuda = { version = "0.1.5"}
candle-core = "0.8.4"
candle-datasets = "0.8.4"
candle-nn = "0.8.4"
candle-transformers = "0.8.4"
half = "2.5.0"
hf-hub = "0.4.2"
intel-mkl-src = { version = "0.8.1"}
serde = { version = "1.0.219" }
serde_json = "1.0.140"
tokenizers = "0.21.1"
anyhow = "1.0.97"
tracing = "0.1.41"
macross = { path = "../macross" }

[package]
name = "candle-notebook"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "candle-ex1"
path = "tutorial/1.Introduction/main.rs"

[[bin]]
name = "candle-ex2"
path = "tutorial/2.tokenizer-and-model/tokenizer.rs"

[dependencies]
accelerate-src = { workspace = true, optional = true }
bindgen_cuda = { workspace = true, optional = true }
candle-core = { workspace = true }
candle-datasets = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
half = { workspace = true }
hf-hub = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = []}
tokenizers = { workspace = true, features = ["http"]}
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
clap = { version = "4.5.35", features = ["derive"] }
rand = "0.9.0"
macross = { workspace = true}

[features]
default = []
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "dep:bindgen_cuda"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl"]
metal = ["candle-core/metal", "candle-nn/metal"]
