[package]
name = "candle-meet-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version="0.21.0", features = ["csr"] }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true}
tokenizers = { version = "0.21.0", default-features = false , features = ["unstable_wasm"] }
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.55", features = ["DomTokenList"]}
gloo = "0.11.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
js-sys = "0.3.64"

# Wasm specific crates.
#console_error_panic_hook = "0.1.7"

#gloo = "0.11"
#js-sys = "0.3.64"

