[package]
name = "candle-ex3"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.8.4"
candle-nn = "0.8.4"
accelerate-src = { version = "0.3.2", optional = true }
bindgen_cuda = { version = "0.1.5", optional = true }
intel-mkl-src = { version = "0.8.1", optional = true }
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["derive"] }

[features]
default = []
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate"]
cuda = ["dep:bindgen_cuda", "candle-core/cuda", "candle-nn/cuda"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl"]
metal = ["candle-core/metal", "candle-nn/metal"]
