[package]
name = "candle-quantized-qwen"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { workspace = true}
candle-nn = { workspace = true}
candle-transformers = { workspace = true}
candle-examples = { workspace = true}
minijinja = "2.9.0"
accelerate-src = { version = "0.3.2", optional = true }
bindgen_cuda = { version = "0.1.5", optional = true }
intel-mkl-src = { version = "0.8.1", optional = true }
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["derive"] }
hf-hub = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
tokenizers = "0.21.1"
serde_json = "1.0.140"
rand = "0.9.1"
mospeada = { workspace = true }
[features]
default = []
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate"]
cuda = ["dep:bindgen_cuda", "candle-core/cuda", "candle-nn/cuda"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl"]
metal = ["candle-core/metal", "candle-nn/metal"]

